Plumb |restart_id| through ExternalBeginFrameSource.

This is used to ensure that ExternalBeginFrameSources have a unique
|source_id| after the GPU process is restarted.

Bug: 871755
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ic5d6066fa2bcdee3c796f9f56967ffcd51e230f1
Reviewed-on: https://chromium-review.googlesource.com/1165888
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Saman Sami <samans@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581967}
Former-commit-id: 3328faef08c9ec0f44eabce16cb106c941010246