components/viz/service/frame_sinks/external_begin_frame_source_mojo.h
@@ -27,7 +27,8 @@ class VIZ_SERVICE_EXPORT ExternalBeginFrameSourceMojo
  public:
   ExternalBeginFrameSourceMojo(
       mojom::ExternalBeginFrameControllerAssociatedRequest controller_request,
-      mojom::ExternalBeginFrameControllerClientPtr client);
+      mojom::ExternalBeginFrameControllerClientPtr client,
+      uint32_t restart_id);
   ~ExternalBeginFrameSourceMojo() override;
 
   // mojom::ExternalBeginFrameController implementation.
