components/viz/service/frame_sinks/root_compositor_frame_sink_impl.cc
@@ -34,13 +34,17 @@ RootCompositorFrameSinkImpl::Create(
   std::unique_ptr<SyntheticBeginFrameSource> synthetic_begin_frame_source;
   ExternalBeginFrameSourceMojo* external_begin_frame_source_mojo = nullptr;
 
+  // BeginFrameSource::source_id component that changes on process restart.
+  uint32_t restart_id = display_provider->GetRestartId();
+
   if (params->external_begin_frame_controller.is_pending() &&
       params->external_begin_frame_controller_client) {
     auto owned_external_begin_frame_source_mojo =
         std::make_unique<ExternalBeginFrameSourceMojo>(
             std::move(params->external_begin_frame_controller),
             mojom::ExternalBeginFrameControllerClientPtr(
-                std::move(params->external_begin_frame_controller_client)));
+                std::move(params->external_begin_frame_controller_client)),
+            restart_id);
     external_begin_frame_source_mojo =
         owned_external_begin_frame_source_mojo.get();
     external_begin_frame_source =
@@ -48,12 +52,12 @@ RootCompositorFrameSinkImpl::Create(
   } else {
 #if defined(OS_ANDROID)
     external_begin_frame_source =
-        std::make_unique<ExternalBeginFrameSourceAndroid>();
+        std::make_unique<ExternalBeginFrameSourceAndroid>(restart_id);
 #else
     synthetic_begin_frame_source = std::make_unique<DelayBasedBeginFrameSource>(
         std::make_unique<DelayBasedTimeSource>(
             base::ThreadTaskRunnerHandle::Get().get()),
-        display_provider->GetRestartId());
+        restart_id);
 #endif
   }
 
