components/viz/common/frame_sinks/begin_frame_source_unittest.cc
@@ -560,9 +560,10 @@ class MockExternalBeginFrameSourceClient
 class ExternalBeginFrameSourceTest : public ::testing::Test {
  public:
   void SetUp() override {
-    client_.reset(new MockExternalBeginFrameSourceClient());
-    source_.reset(new ExternalBeginFrameSource(client_.get()));
-    obs_.reset(new MockBeginFrameObserver);
+    client_ = std::make_unique<MockExternalBeginFrameSourceClient>();
+    source_ = std::make_unique<ExternalBeginFrameSource>(
+        client_.get(), BeginFrameSource::kNotRestartableId);
+    obs_ = std::make_unique<MockBeginFrameObserver>();
   }
 
   void TearDown() override {
